# nawanai

./: .gitignore  README.md
nawanai-intruder/: Cargo.toml
nawanai-intruder/src/: main.rs  tcp.rs  util.rs
nawanai-intruder/ui/: appwindow.slint  styling.slint
nawanai-victim/: Cargo.toml
nawanai-victim/src/: links.rs  main.rs  power.rs  thread.rs
